--- a/static/frontend/scss/partials/layout.scss
+++ b/static/frontend/scss/partials/layout.scss
@@ -41,6 +41,7 @@ $mobileNavHeight: 100px;
 
     #siteFooter {
         grid-area: footer;
+        background: linear-gradient(45deg, #232323, #343434, #232323);
     }
 }
 
