--- a/static/frontend/scss/partials/singleProduct.scss
+++ b/static/frontend/scss/partials/singleProduct.scss
@@ -1,4 +1,4 @@
-$teaseProductPictureWidth: 400px;
+$teaseProductPictureWidth: 270px;
 #singleProduct {
     padding: 20px;
     font-size: 2rem;
@@ -8,7 +8,7 @@ $teaseProductPictureWidth: 400px;
         padding: 0;
         flex-flow: column;
     }
-    
+
     #teaseProductContentWrapper {
         flex-flow: column;
         * {
@@ -19,51 +19,56 @@ $teaseProductPictureWidth: 400px;
         }
     }
     
+    .teaseProductPictureContainer {
+        width: $teaseProductPictureWidth;
+        height: $teaseProductPictureWidth;
+        
+        
+        .teaseProductPicture {
+            max-height: $teaseProductPictureWidth;
+            max-width: $teaseProductPictureWidth;
+        }
+    }
+
     .teaseProductHeader {
         width: auto;
     }
-    
+
     .teaseProductFormQuantity {
         width: 100%;
         height: 50px;
     }
-    
+
     .customSelectSelected {
         height: 50px;
     }
-    
+
     .teaseProductFormSubmitLabel, .teaseProductFormQuantityLabel {
         height: auto;
         display: block;
     }
-    
+
     .teaseProductFormSubmitLabel {
         padding-top: 5px;
     }
-    
+
     .teaseProductForm {
         width: 100%;
     }
-    
+
     .teaseProductFormSubmit {
         width: 100%;
         height: 80px;
     }
     
-    //.teaseProductPictureContainer {
-    //    width: 30%;
-    //    height: auto;
-    //
-    //    .teaseProductPicture {
-    //        width: 100%;
-    //        height: auto;
-    //        max-height: 100%;
-    //        max-width: 100%;
-    //    }
-    //}
+}
+
+#singleProductBuyRedirect {
+    height: 80px;
 }
 
 @media screen and (min-width: 996px) {
+    $teaseProductPictureWidth: 400px;
     #singleProduct {
         .teaseProduct {
             flex-flow: row wrap;
@@ -74,7 +79,7 @@ $teaseProductPictureWidth: 400px;
             align-items: flex-start;
             padding-left: 20px;
     
-            * {
+            *:not(input) {
                 text-align: left;
             }
             
@@ -82,17 +87,19 @@ $teaseProductPictureWidth: 400px;
                 text-align: center;
             }
         }
-        
+    
         .teaseProductPictureContainer {
             width: $teaseProductPictureWidth;
             height: $teaseProductPictureWidth;
-            
-            
+        
+        
             .teaseProductPicture {
                 max-height: $teaseProductPictureWidth;
                 max-width: $teaseProductPictureWidth;
             }
         }
+        
+        
         
         .teaseProductPrice {
             width: auto;
